2023-10-20T16:22:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6590246600 # 882
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
* notice: last 14d: unq all: 3 33
* notice: prev accum: outdated-unq outdated-all / unq all: 262 552 / 277 584
* notice: next accum: outdated-unq outdated-all / unq all: 262 552 / 277 585
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-10-20]

2023-10-20T08:22:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6585228141 # 881
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
* notice: last 14d: unq all: 3 32
* notice: prev accum: outdated-unq outdated-all / unq all: 262 552 / 276 583
* notice: next accum: outdated-unq outdated-all / unq all: 262 552 / 277 584
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-10-20]

2023-10-20T01:16:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6582144683 # 880
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
* notice: last 14d: unq all: 2 31
* notice: prev accum: outdated-unq outdated-all / unq all: 262 552 / 275 582
* notice: next accum: outdated-unq outdated-all / unq all: 262 552 / 276 583
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-20]

2023-10-19T16:23:48Z: