@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-20T16:22:49Z",
-  "count" : 3,
-  "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "timestamp" : "2023-10-21T01:14:25Z",
+  "count" : 4,
+  "count_minmax" : [ 1, 4 ],
+  "count_decinc" : [ -0, +4 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
