@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-20T16:22:49Z",
+  "timestamp" : "2023-10-21T01:14:25Z",
   "count_outdated" : 552,
   "uniques_outdated" : 262,
-  "count" : 585,
+  "count" : 586,
   "uniques" : 277,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2023-10-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "count_decinc": [ 0, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
