@@ -1,5 +1,5 @@
 {
-  "count": 33,
+  "count": 34,
   "uniques": 3,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2023-10-20T00:00:00Z",
-      "count": 3,
+      "count": 4,
       "uniques": 2
     }
   ]
