@@ -1,3 +1,12 @@
+2023-10-21T01:14:25Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6594310416 # 883
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-21
+* notice: last 14d: unq all: 3 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 262 552 / 277 585
+* notice: next accum: outdated-unq outdated-all / unq all: 262 552 / 277 586
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2023-10-20]
+
 2023-10-20T16:22:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6590246600 # 882
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
